# forward_declaration

./: CMakeLists.txt  README.md  configure.bat  configure.sh
cmake/: utils_exes.cmake  utils_libs.cmake
sources/: CMakeLists.txt
sources/main/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  main.cpp
